--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 body {
   font-family: "Robotto", "Arial", sans-serif;
-  font-size: 16px;
+  min-width: 900px;
+  font-size: 14px;
   line-height: 22px;
   color: rgb(40, 49, 54);
-  font-weight: bold;
+  background:#ffffff;
+  font-weight: 600;
 }
 
 h1 {
@@ -19,7 +21,8 @@ h1 {
 }
 .main-header {	
 	margin-bottom: 50px;
-	min-height: 85px;
+	min-height: 80px;
+	background:#eeeeee;
 }
 
 .main-header-catalog {
@@ -35,26 +38,67 @@ h1 {
 	margin: 0 auto;	
 }
 .index-logo {
+	position: relative;
 	float: left;
-	min-height: 85px;
-	width: 140px;
+	min-height: 80px;
+	width: 150px;
+	outline: 2px solid green;
+}
+.index-logo-img {
+	position: absolute;
+	top:27px;
 }
 .main-navigation {
 	float: left;
-	min-height: 85px;
-	width: 560px;
+	margin-left: 160px;
+	min-height: 80px;
+	width: 470px;
 	outline: 2px solid green;
 }
-.main-navigation ul li{
+.main-navigation a {
+	display: block;
+	padding-top:50px;
+	padding-left: 45px;
+	padding-bottom: 0px;
+	color:#3f3f3f;
+	text-decoration: none;
+	text-transform: uppercase;
+}
+
+.main-navigation ul {
+	margin: 0px;
+	padding: 0px;
+	list-style: none;
+	font-size: 0px;
+}
+.main-navigation li {
 	display: inline-block;
+	text-align: top;
+	font-size: 14px;
+	line-height: 30px;
+	padding-bottom: 0px;
+
 }
 .user-block {
-	float: left;
-	min-height: 85px;
-	width: 90px;
+	float: right;
+	min-height: 8px;
+	max-width: 90px;
 	outline: 2px solid yellow;
 
 }
+.basket {
+	display: inline-block;
+	vertical-align: top;
+	padding-top: 50px;
+	padding-left: 25px;
+	font-size: 14px;
+	line-height: 30px;
+	text-transform: uppercase;
+	color:#3f3f3f;
+	text-decoration: none; 
+
+}
+
 .slider {
 	margin-bottom: 80px;
 }
@@ -173,10 +217,7 @@ h1 {
 	float: right;
 	width: 560px;
 }
-.contacts-adress{
-	position: absolute;
-	top: 20px;
-}
+
 .main-footer{
 	outline: 3px solid red;
 }
