--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Robotto", "Arial", sans-serif;
   min-width: 900px;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 22px;
   color: rgb(40, 49, 54);
   background:#ffffff;
@@ -20,7 +20,7 @@ h1 {
   clear: both;
 }
 .main-header {	
-	margin-bottom: 50px;
+	margin-bottom: 55px;
 	min-height: 80px;
 	background:#eeeeee;
 }
@@ -101,6 +101,9 @@ h1 {
 
 .slider {
 	margin-bottom: 80px;
+	min-height: 300px;
+	background:#eeeeee;
+	outline: 2px solid blue;
 }
 .slider-content{
 	outline: 2px solid green;
@@ -108,12 +111,62 @@ h1 {
 .slider-content-left {
 	float: left;
 	width: 390px;
-	min-height: 300px;
+	min-height: 220px;
+	outline: 2px solid yellow;
 }
+.slider-slogan {
+	font-size: 36px;
+	line-height: 36px;
+	margin:0px;
+	margin-top: 25px;
+	margin-bottom: 30px;
+}
+.more {
+	display: inline-block;
+	font-size: 12px;
+	line-height: 18px;
+	font-weight: 600;
+	text-transform: uppercase;
+	color:#ffffff;
+	background:#fb565a;
+	padding: 11px 70px;
+	text-decoration: none;
+}
+
 .slider-content-right{
+	position: relative;
 	float: right;
-	width: 400px;
-	min-height: 300px;
+	width: 340px;
+	min-height: 220px;
+	outline: 2px solid red;
+}
+.slider-logo-img{
+	position: absolute;
+}
+.features {
+	min-height: 380px;	
+	background:url(../img/index/divide.png) no-repeat bottom;
+	margin-bottom: 60px;
+}
+.features-name {
+	font-size: 18px;
+	line-height: 30px;
+	text-transform: uppercase;
+	margin: 0px;
+	margin-top: 27px;
+	margin-bottom: 18px;
+	font-weight: 600;
+}
+.features-desc {
+	font-size: 15px;
+	line-height: 22px;
+	font-weight: 600;
+	margin-bottom: 25px;
+
+}
+.features-image {
+	width: 240px;
+	height: 124px;
 }
 .features-item{
 	float: left;
@@ -125,6 +178,21 @@ h1 {
 .features-item:last-child{
 	margin-right: 0px;
 }
+.features-anchor-2 {
+	background-color:#00ca74;
+}
+.features-anchor {
+	display: inline-block;
+	font-size: 12px;
+	line-height: 18px;
+	font-weight: 600;
+	text-transform: uppercase;
+	color:#ffffff;
+	background:#fb565a;
+	padding: 11px 40px;
+	text-decoration: none;
+}
+
 .about-company-content-left{
 	float: left;
 	width: 630px;
@@ -132,8 +200,8 @@ h1 {
 }
 .about-company-content-right{
 	float: right;
-	width: 250px;
-	min-height: 340px;
+	width: 340px;
+	min-height: 235px;
 }
 .about-company{
 	margin-top: 140px;
