--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ h1 {
 	text-decoration: none;
 	text-transform: uppercase;
 }
-
+ 
 .main-navigation ul {
 	margin: 0px;
 	padding: 0px;
@@ -73,7 +73,7 @@ h1 {
 }
 .main-navigation li {
 	display: inline-block;
-	text-align: top;
+	text-align: bottom;
 	font-size: 14px;
 	line-height: 30px;
 	padding-bottom: 0px;
@@ -178,8 +178,8 @@ h1 {
 .features-item:last-child{
 	margin-right: 0px;
 }
-.features-anchor-2 {
-	background-color:#00ca74;
+.btn-2 {
+	background:red;
 }
 .features-anchor {
 	display: inline-block;
@@ -211,31 +211,66 @@ h1 {
 	outline: 2px solid blue;
 }
 .about-company-slogan {
-	margin-top: 18px;
+	margin-top: 0px;
 	margin-bottom: 25px;
 	font-size: 36px;
 	line-height: 36px;
 	font-weight: 600;
 }
+.about-container-right {
+	width: 250px;
+	min-height: 140px;
+	background-color: green;
+	outline: 2px solid red;
+	text-align: center;
+	text-transform: uppercase;
+
+}
+.about-container-left{
+	width: 620px;
+	min-height: 140px;
+	background:yellow;
+	outline: 2px solid red;
+}
+
+.aside-menu {
+	margin: 0px;
+	padding: 0px;
+}
 .aside-content-title {
 	margin: 0px;
 	text-transform: uppercase;
 	margin-bottom: 30px;
+	margin-top: 60px;
+	font-size: 16px;
+	line-height: 22px;
+	text-transform: uppercase;
 
 }
 .about-company-desc {
 	margin: 0px;
 	margin-bottom: 54px;
 }
-.aside-content-left ul {
+.aside-content-left {
+	width: 480px;
+	height: 220px;
+	background:yellow;
+	outline: 2px solid blue;
+}
+.aside-content-right {
+	width: 250px;
+	min-height: 220px;
+	background:yellow;
+	outline:2px solid blue;
+}
+.aside-menu {
 	list-style: none;
 	margin: 0px;
-}
-.aside-content-left ul li {
-	margin:0px;
 	padding: 0px;
-	margin-left: 38px;
-	margin-top: 30px;
+	margin-left: 35px;
+}
+.aside-menu li {
+	margin-bottom: 15px;
 }
 .catalog{
 	float: right;
@@ -278,21 +313,22 @@ h1 {
 }
 .gallery {
 	margin-top: 75px;
-	outline: 2px solid yellow;
+	outline: 2px solid green;
 	min-height: 170px;
 	margin-bottom: 85px;
-}
-.gallery ul li {
-	display: inline-block;
+	background:yellow;
 }
 
 .main-footer .container {
 	margin-top: 75px;	
 	min-height: 140px;
 	outline: 2px solid green;
+	background:yellow;
 }
-.main-footer-map{
-
+.footer-slogan {
+	font-size: 36px;
+	line-height: 36px;
+	
 }
 .footer-container-left {
 	float: left;
