--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ h1 {
   display: table;
   clear: both;
 }
+/******************************************header***********************************/
 .main-header {	
 	
 	min-height: 135px;
@@ -108,7 +109,8 @@ h1 {
 	text-decoration: none; 
 
 }
-
+/**************************************************************************************/
+/*************************************slider*******************************************/
 .slider {
 	margin-bottom: 80px;
 	min-height: 300px;
@@ -153,6 +155,8 @@ h1 {
 .slider-logo-img{
 	position: absolute;
 }
+/*******************************************************************************/
+/*************************features**********************************************/
 .features {
 	min-height: 380px;	
 	background:url(../img/index/divide.png) no-repeat bottom;
@@ -208,6 +212,7 @@ h1 {
 .features .anchor-3 {
 	background-color:#efc84a;
 }
+/*********************************************about-company**********************/
 .about-company-content-left{
 	float: left;
 	width: 620px;
@@ -254,7 +259,8 @@ h1 {
 	top:50%;
 	left:50%;
 }
-
+/*********************************************************************/
+/***********************aside*****************************************/
 .aside-menu {
 	margin: 0px;
 	padding: 0px;
@@ -294,13 +300,8 @@ h1 {
 .aside-menu li {
 	margin-bottom: 15px;
 }
-.catalog{
-	float: right;
-	width: 580px;
-	min-height: 1130px;
-	outline: 2px solid red;
-	margin-bottom: 80px;
-}
+/*****************************************************************************************/
+
 
 
 .sidebar {
@@ -313,18 +314,31 @@ h1 {
 	list-style: none;
 	margin: 0px;
 	padding: 0px;
-
 }
+.sidebar ul li {
+	margin-bottom: 25px;
+}
+
 .contacts {
 	clear: both;
+}
+/******************************************catalog*********************************************/
+.catalog{
+	float: right;
+	width: 580px;
+	min-height: 1130px;
+	outline: 2px solid red;
+	margin-bottom: 80px;
 }
 .catalog-filter {
 	clear: both;
 }
 .catalog-filter ul {
+	text-transform: uppercase;
 	margin: 0px;
 	padding: 0px;
 	font-size: 0px;
+	margin-bottom: 20px;
 }
 .catalog-filter ul li {
 	display: inline-block;
@@ -334,13 +348,32 @@ h1 {
 .catalog-filter a {
 	display: block;
 	text-decoration: none;
+	padding-left: 37px;
+	color: #000000;
 }
 
-.catalog-item {
+.catalog-item {	
 	float: left;
-	width: 250px;
+	width: 240px;
 	min-height: 275px;
 	margin-bottom: 80px;
+}
+.catalog-content {
+	position: relative;
+}
+.catalog-content:before {
+	content: "";
+  position: absolute;
+  top: 0px;
+  background-image:url("../img/catalog/xxx.jpg");
+  background-repeat: no-repeat;
+  height: 30px;
+  width: 240px;  
+}
+.catalog-content {
+	width: 240px;
+	min-height: 240px;
+	padding-top: 30px;
 }
 .catalog-item:nth-child(2n+1){
 	outline: 3px solid blue;
@@ -349,9 +382,29 @@ h1 {
 .catalog-item:nth-child(2n) {
 	outline: 3px solid green;
 }
-.catalog-pagination {
+.catalog-paginator {
 	clear: both;
 }
+.catalog-pagination a {
+ display:inline-block;
+ font-size: 12px;
+ font-weight: bold;
+ height: 40px;
+ min-width: 40px;
+ vertical-align:middle;
+ text-align:center;
+ line-height: 40px;
+ color: #000000;
+ text-decoration: none; 
+ background-color:#f1f1f1;
+ margin-right: 5px;
+	
+}
+/*не стилизуется поледняя кнопка*/
+.catalog .catalog-next  {
+	padding:0 40px;
+}
+/********************************************************************************************/
 .gallery {
 	margin-top: 75px;
 	outline: 2px solid green;
