--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,48 @@ body {
   background:#ffffff;
   font-weight: 600;
 }
+@font-face {
+  font-weight: normal;
+  font-style: normal;
+
+  font-family: "symbols-nerds";
+  src: url("../fonts/symbols-nerds.woff") format("woff"),
+       url("../fonts/symbols-nerds.woff2") format("woff2");
+}
+
+[class^="icon-"]::before,
+[class*=" icon-"]::before {
+  display: inline-block;
+  width: 1em;
+  margin-right: 0.2em;
+  margin-left: 0.2em;
+
+  font-weight: normal;
+  line-height: 1em;
+  font-family: "symbols-nerds";
+  text-align: center;
+  text-transform: none;
+  text-decoration: inherit;
+  font-style: normal;
+  font-variant: normal;
+
+  speak: none;
+}
+
+.icon-basket::before { content: "\62"; } /* "b" */
+.icon-facebook::before { content: "\66"; } /* "f" */
+.icon-twitter::before { content: "\74"; } /* "t" */
+.icon-vk::before { content: "\76"; } /* "v" */
+.icon-up-dir::before { content: "\25b2"; } /* "▲" */
+.icon-down-dir::before { content: "\25bc"; } /* "▼" */
+.icon-circle::before { content: "\25cb"; } /* "○" */
+.icon-circle-dot::before { content: "\25cf"; } /* "●" */
+.icon-check-off::before { content: "\2610"; } /* "☐" */
+.icon-check-on::before { content: "\2611"; } /* "☑" */
+.icon-instagramm::before { content: "📷"; } /* "\1f4f7" */
+
+
+
 
 h1 {
   clear: both;
@@ -389,7 +431,6 @@ h1 {
 /*****************************************************************************************/
 
 
-
 .sidebar {
 	float: left;
 	width: 240px;
@@ -401,9 +442,61 @@ h1 {
 	margin: 0px;
 	padding: 0px;
 }
-.sidebar ul li {
-	margin-bottom: 25px;
+
+input[type="radio"]{
+	display: none;
 }
+input[type="radio"]+label {
+	display: block;
+	margin: 10px 0px;
+	line-height: 20px;
+	padding-left: 30px;
+	position: relative;
+	cursor: pointer;
+}
+input[type="radio"]+label::before {
+	content: "\25cb";
+	display: block;
+	font-size: 28px;
+	font-family: "symbols-nerds";
+	width: 10px;
+	height: 10px;	
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+input[type="radio"]:checked + label::before {
+	 content: "\25cf"; 
+}
+
+
+input[type="checkbox"]{
+	display: none;
+}
+input[type="checkbox"] + label {
+	display: block;
+	margin: 10px 0px;
+	line-height: 20px;
+	padding-left: 30px;
+	position: relative;
+	cursor: pointer;
+	
+}
+input[type="checkbox"] + label::before {
+	content: "\2610";
+	display: block;
+	font-size: 28px;
+	font-family: "symbols-nerds";
+	width: 10px;
+	height: 10px;	
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+input[type="checkbox"]:checked + label::before {
+	content: "\2611";
+}
+
 
 .contacts {
 	clear: both;
