--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Robotto", "Arial", sans-serif;
+  font-family: "Roboto", "Arial", sans-serif;
   min-width: 900px;
   font-size: 16px;
   line-height: 22px;
@@ -239,7 +239,7 @@ content: "\62";
 	text-transform: uppercase;
 	margin: 0px;
 	margin-top: 25px;
-	margin-bottom: 20px;
+	margin-bottom: -2px;
 	font-weight: 600;
 }
 .features-desc {
@@ -330,8 +330,8 @@ content: "\62";
 }	
 	
 .about-company-slogan {
-	margin-top: 50px;
-	margin-bottom: 25px;
+	margin-top: 70px;
+	margin-bottom: 20px;
 	font-size: 36px;
 	line-height: 36px;
 	font-weight: 600;
@@ -350,14 +350,16 @@ content: "\62";
 	border: 1px solid transparent;
 }
 .about-company-logo {
-	padding-top: 70px;
+	padding-top: 60px;
+	padding-left: 20px;
 	
 	
 }
 .about-company-since {
 	margin: 0px;
 	position: relative;
-	bottom: -50px;
+	bottom: -20px;
+	left: 7px;
 	padding:0 5px;
 }
 .about-company-since:before {
@@ -397,12 +399,16 @@ content: "\62";
 .aside-content-title {
 	margin: 0px;
 	text-transform: uppercase;
-	margin-bottom: 30px;
-	margin-top: 60px;
+	margin-bottom: 22px;
+	margin-top: -12px;
+	margin-left: -1px;
 	font-size: 16px;
 	line-height: 22px;
 	text-transform: uppercase;
 
+}
+.aside-right {
+	margin-top: -1px;
 }
 .about-company-desc {
 	margin: 0px;
@@ -425,8 +431,9 @@ content: "\62";
 	
 }
 .aside-menu li {
-	margin-bottom: 15px;
+	margin-bottom: 21px;
 	padding-left:30px;
+	margin-left: 13px;
 }
 /*****************************************************************************************/
 
@@ -615,9 +622,9 @@ input[type="checkbox"]:checked + label::before {
 }
 /********************************************************************************************/
 .gallery {	
-	margin-top: 75px;	
+	margin-top: 30px;	
 	min-height: 170px;
-	margin-bottom: 85px;
+	margin-bottom: 40px;
 	background:url(../img/index/divide.png) no-repeat bottom;
 	
 }
@@ -626,6 +633,13 @@ input[type="checkbox"]:checked + label::before {
 	vertical-align: middle;
 	text-align: center;
 	opacity: 0.2;
+	margin-right: 120px;
+}
+.gallery ul li:last-child {
+	margin-right: 0px;
+}
+.gallery ul li:first-child {
+	margin-left: -30px;
 }
 .gallery ul li:focus,
 .gallery ul li:hover {
@@ -677,7 +691,7 @@ input[type="checkbox"]:checked + label::before {
 	z-index: 8;
 }
 .main-footer .container {
-	margin-top: 75px;	
+	margin-top: 37px;	
 	min-height: 140px;	
 	
 }
@@ -698,20 +712,21 @@ input[type="checkbox"]:checked + label::before {
 	font-size: 36px;
 	line-height: 36px;
 	margin-top: 30px;
+	margin-bottom: -5px;
 }
 
 /**************btn******************************/
 .social-btn {
 	display: inline-block;
 	vertical-align: top;
-	width: 50px;
-	height: 50px;
+	width: 60px;
+	height: 60px;
 	border-radius: 50%;
 	font-size: 0px;
 	background:#e1e1e1;
 	position: relative;
-	margin-top:30px;
-	margin-right: 20px;
+	margin-top:37px;
+	margin-right: 23px;
 }
 .social-btn:focus,
 .social-btn:hover {
