--- a/css/style.css
+++ b/css/style.css
@@ -70,15 +70,17 @@ h1 {
 .main-header-catalog {
 	min-height: 328px;
 	background:#eeeeee;
-	margin-bottom: 80px;
+	margin-bottom: 74px;
 }
 
 .main-welcome {
 	font-size: 40px;
-	line-height: 40px;
+	line-height: 45px;
 	text-transform: uppercase;
-	padding-top: 75px;
+	padding-top: 17px;
 	text-align: center;
+	margin-left: -10px;
+	font-weight: 400;
 }
 .container {
 	width: 880px;
@@ -127,27 +129,27 @@ h1 {
 }
  
 .main-navigation ul {
-	margin: 0px;
+	margin: 0;
 	margin-left: 11px;
 	margin-top: 43px;
-	padding: 0px;
+	padding: 0;
 	list-style: none;
-	font-size: 0px;
+	font-size: 0;
 }
 .main-navigation li {
 	display: inline-block;
 	margin-right: 41px;
 	padding: 10px 0px;
-	text-align: bottom;
+	vertical-align: top;
 	font-size: 14px;
 	line-height: 30px;
-	padding-bottom: 0px;
+	padding-bottom: 0;
 
 }
 .user-block {
 	float: right;
 	min-height: 135px;
-	max-width: 90px;
+	max-width: 100px;
 	
 }
 .basket {
@@ -156,7 +158,7 @@ h1 {
 	padding: 5px 0px;
 	padding-left: 10px;
 	margin-top: 48px;
-	margin-left: 10px;
+	margin-left: 0;
 	font-size: 14px;
 	line-height: 30px;
 	text-transform: uppercase;
@@ -198,7 +200,7 @@ content: "\62";
 .slider-slogan {
 	font-size: 36px;
 	line-height: 36px;
-	margin:0px;
+	margin:0;
 	margin-top: 23px;
 	margin-bottom: 17px;
 }
@@ -237,7 +239,7 @@ content: "\62";
 	font-size: 18px;
 	line-height: 30px;
 	text-transform: uppercase;
-	margin: 0px;
+	margin: 0;
 	margin-top: 25px;
 	margin-bottom: -2px;
 	font-weight: 600;
@@ -261,7 +263,7 @@ content: "\62";
 
 }
 .features-item:last-child{
-	margin-right: 0px;
+	margin-right: 0;
 }
 
 .features-anchor {
@@ -356,7 +358,7 @@ content: "\62";
 	
 }
 .about-company-since {
-	margin: 0px;
+	margin: 0;
 	position: relative;
 	bottom: -20px;
 	left: 7px;
@@ -368,7 +370,7 @@ content: "\62";
 	 outline: 1px solid #eeeeee;
 	 top:50%;
 	 width: 70px;	
-	 left: 0px;
+	 left: 0;
 }
 .about-company-since:after {
 	 content: "";
@@ -376,14 +378,14 @@ content: "\62";
 	 outline: 1px solid #eeeeee;
 	 top:50%;
 	 width: 70px;	
-	 right: 0px;
+	 right: 0;
 }
 
 /*********************************************************************/
 /***********************aside*****************************************/
 .aside-menu {
-	margin: 0px;
-	padding: 0px;
+	margin: 0;
+	padding: 0;
 }
 .aside-item {
 	position: relative;
@@ -394,10 +396,10 @@ content: "\62";
 	 outline: 1px solid red;
 	 top:50%;
 	 width: 20px;	
-	 left: 0px;
+	 left: 0;
 }
 .aside-content-title {
-	margin: 0px;
+	margin: 0;
 	text-transform: uppercase;
 	margin-bottom: 22px;
 	margin-top: -12px;
@@ -411,7 +413,7 @@ content: "\62";
 	margin-top: -1px;
 }
 .about-company-desc {
-	margin: 0px;
+	margin: 0;
 	margin-bottom: 54px;
 }
 .aside-content-left {
@@ -426,8 +428,8 @@ content: "\62";
 }
 .aside-menu {
 	list-style: none;
-	margin: 0px;
-	padding: 0px;
+	margin: 0;
+	padding: 0;
 	
 }
 .aside-menu li {
@@ -446,20 +448,25 @@ content: "\62";
 }
 .sidebar ul {
 	list-style: none;
-	margin: 0px;
-	padding: 0px;
+	margin: 0;
+	padding: 0;
 }
 .sidebar-btn {
-	margin: 0px;
-	padding: 0px;
-	margin-top: 30px;
-	padding:5px 20px;
+	margin: 0;
+	padding: 0;
+	margin-top: -10px;
+	padding:10px 30px;
 	font-size: 12px;
 	line-height: 18px;
 	font-weight: bold;
 	text-transform: uppercase;
 	background-color: #f1f1f1;
-	box-shadow:0 0 0 0 ;
+	border:none;
+	cursor: pointer;
+}
+.sidebar fieldset {
+	border:none;
+	margin-bottom: 40px;
 }
 
 input[type="radio"]{
@@ -477,9 +484,8 @@ input[type="radio"]+label::before {
 	content: "\25cb";
 	display: block;
 	font-size: 28px;
-	font-family: "symbols-nerds";
-	width: 10px;
-	height: 10px;	
+	font-weight: 200;
+	font-family: "symbols-nerds";	
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -505,9 +511,8 @@ input[type="checkbox"] + label::before {
 	content: "\2610";
 	display: block;
 	font-size: 28px;
-	font-family: "symbols-nerds";
-	width: 10px;
-	height: 10px;	
+	font-weight:200;
+	font-family: "symbols-nerds";	
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -532,10 +537,11 @@ input[type="checkbox"]:checked + label::before {
 }
 .catalog-filter ul {
 	text-transform: uppercase;
-	margin: 0px;
-	padding: 0px;
-	font-size: 0px;
-	margin-bottom: 40px;
+	margin: 0;
+	padding: 0;
+	font-size: 0;
+	margin-bottom: 11px;
+	margin-left: 16px;
 }
 .catalog-filter ul li {
 	display: inline-block;
@@ -545,19 +551,33 @@ input[type="checkbox"]:checked + label::before {
 .catalog-filter a {
 	display: block;
 	text-decoration: none;
-	margin-left: 32px;
+	margin-left: 40px;
 	color: #000000;
 	padding: 5px 0px;
+	border: 2px solid transparent;
 }
 .catalog-filter a:hover {
-	border-bottom: 2px solid #01a25e;
+	border-bottom: 2px dotted #01a25e;
 }
 
-.catalog-filter a span {
-	color: #c1c1c1;
-	font-size: 23px;
+#triangle-up {
+	display: inline-block;
+	width: 0;
+	height: 0;
+	border-left: 5px solid transparent;
+	border-right: 5px solid transparent;
+	border-bottom: 10px solid red;
 }
-
+#triangle-down {
+	width: 0;
+	height: 0;
+	border-left: 5px solid transparent;
+	border-right: 5px solid transparent;
+	border-top: 10px solid red;
+}
+.catalog-filter-triangles {
+	display: inline-block;
+}
 .catalog-pagination a:focus,
 .catalog-pagination a:hover {
 	background: #e5e5e5;
@@ -570,7 +590,8 @@ input[type="checkbox"]:checked + label::before {
 	float: left;
 	width: 240px;
 	min-height: 275px;
-	margin-bottom: 80px;
+	margin-bottom: 74px;
+	margin-left: 20px;
 }
 .catalog-content {
 	position: relative;
@@ -578,7 +599,7 @@ input[type="checkbox"]:checked + label::before {
 .catalog-content:before {
 	content: "";
   position: absolute;
-  top: 0px;
+  top: 0;
   background-image:url("../img/catalog/xxx.jpg");
   background-repeat: no-repeat;
   height: 30px;
@@ -600,6 +621,9 @@ input[type="checkbox"]:checked + label::before {
 }
 .catalog-paginator {
 	clear: both;
+}
+.catalog-pagination a:first-child {
+	margin-left: 20px;
 }
 .catalog-pagination a {
  display:inline-block;
@@ -636,7 +660,7 @@ input[type="checkbox"]:checked + label::before {
 	margin-right: 120px;
 }
 .gallery ul li:last-child {
-	margin-right: 0px;
+	margin-right: 0;
 }
 .gallery ul li:first-child {
 	margin-left: -30px;
@@ -657,9 +681,7 @@ input[type="checkbox"]:checked + label::before {
 	height: 240px;	
 	top:80px;
 	right: 50%;
-	left:180px;
-	
-	z-index: 10;
+	left:180px;	
 
 }
 .contacts-adress-btn {
@@ -722,7 +744,7 @@ input[type="checkbox"]:checked + label::before {
 	width: 60px;
 	height: 60px;
 	border-radius: 50%;
-	font-size: 0px;
+	font-size: 0;
 	background:#e1e1e1;
 	position: relative;
 	margin-top:37px;
