--- a/css/style.css
+++ b/css/style.css
@@ -664,6 +664,81 @@ input[type="checkbox"]:checked + label::before {
 	content: "\2611";
 }
 
+.range-filter {
+	margin-top:20px;
+  width: 240px;
+  min-height: 150px;
+  
+}
+
+.range-controls {
+	position: relative;
+  height: 41px;
+  padding-top: 39px;
+  margin-bottom: 15px;
+  padding-right: 20px;
+  padding-left: 20px;
+  border-radius: 5px;
+  background: #f1f1f1;
+}
+
+.range-controls .scale {
+  height: 2px;
+  background: #d7dcde;
+}
+.range-controls .bar {
+  width: 70%;
+  height: 2px;
+  background: #00ca74;
+}
+.range-controls .toggle {
+	  position: absolute;
+  top: 30px;
+  left: 0px;
+  width: 4px;
+  height: 4px;
+  cursor: pointer;
+  border: 8px solid #fff;
+  background: #ababab;
+  border-radius: 50%;
+  box-shadow: 0 2px 1px 0 #cfcfcf;
+
+}
+.range-controls .toggle-min {
+  left: 50px;
+}
+
+.range-controls .toggle-max {
+  left: 110px;
+}
+.price-controls {
+  font-size: 0;
+}
+
+.price-controls label {
+	font-size: 16px;
+  display: inline-block;
+  width: 50%;
+}
+.price-controls input {
+  font-family: 'Roboto', 'Arial', sans-serif;
+  font-size: 16px;
+  width: 60px;
+  margin-left: 10px;
+
+  padding: 8px 10px;
+  text-align: center;
+  color: #283136;
+  border: none;
+  border-radius: 5px;
+  outline: none;
+  background: #f1f1f1;
+
+}
+.max-price {
+  text-align: right;
+}
+
 
 .contacts {
 	clear: both;
