--- a/css/style.css
+++ b/css/style.css
@@ -865,6 +865,8 @@ input[type="checkbox"]:checked + label::before {
 }
 .catalog-content h4 {
 	text-transform: uppercase;
+	font-size: 18px;
+	line-height: 24px;
 }
 
 
