--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ h1 {
 	
 	min-height: 135px;
 	background:#eeeeee;
-	  padding-top: 50px;
+	  padding-top: 0px;
 	  margin-bottom: 80px;
 
 }
@@ -595,6 +595,7 @@ content: "\62";
 	padding: 0;
 }
 .sidebar-btn {
+	 font-family: "Roboto", "Arial", sans-serif;
 	margin: 0;
 	padding: 0;
 	margin-top: -10px;
@@ -606,10 +607,14 @@ content: "\62";
 	background-color: #f1f1f1;
 	border:none;
 	cursor: pointer;
+	font-weight: bold;
 }
 .sidebar fieldset {
 	border:none;
 	margin-bottom: 40px;
+}
+.sidebar-title {
+	text-transform: uppercase;
 }
 
 input[type="radio"]{
@@ -632,6 +637,7 @@ input[type="radio"]+label::before {
 	position: absolute;
 	top: 0;
 	left: 0;
+	color: #b5b5b5;
 }
 input[type="radio"]:checked + label::before {
 	 content: "\25cf"; 
@@ -659,6 +665,7 @@ input[type="checkbox"] + label::before {
 	position: absolute;
 	top: 0;
 	left: 0;
+	color: #b5b5b5;
 }
 input[type="checkbox"]:checked + label::before {
 	content: "\2611";
@@ -1076,11 +1083,12 @@ input[type="checkbox"]:checked + label::before {
     background-position: -10px -128px;
 }
 /*******************************************************************/
-/*.modal-content {
+.modal-content {
   position: absolute;
-  bottom:-120px;
+  bottom:-1400px;
   left: 50%;
   margin-left:-315px;
+  display:none;
 
   width: 465px;
   padding: 60px 80px;
@@ -1088,20 +1096,20 @@ input[type="checkbox"]:checked + label::before {
   color: #000000;
 
   background: white;
-  outline: 2px dotted green;
-
+  box-shadow: 0px 0px 15px 15px #e9e5dc;
+  
 }
 .modal-content-close {
   position: absolute;
-  top: 0;
-  right: 0px;
+  top: 10px;
+  right: 10px;
 
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   
   font-size: 0;
 
-  background-color: red;
+  background-color:#fb565a;
   border: 0;
   outline: 0;
   cursor: pointer;
@@ -1111,12 +1119,12 @@ input[type="checkbox"]:checked + label::before {
 .modal-content-close::after {
   content: "";
   position: absolute;
-  top: 13px;
-  left: 3px;
+  top: 17px;
+  left: 7px;
 
 
-  width: 22px;
-  height: 3px;
+  width: 25px;
+  height: 5px;
   background-color: white;
   border-radius: 1px;
 }
@@ -1132,36 +1140,68 @@ input[type="checkbox"]:checked + label::before {
 	display: inline-block;
 	font-family:'Roboto', 'Arial', sans-serif;
   font-size: 16px;
-  width: 220px;
-  margin-left: 20px; 
-  text-align: center;
+  width: 210px;
+  margin-top: 20px;
+  text-align: left;
+  font-weight: 600;
   color: #283136;
   padding:10px 0;
+  padding-left:10px;
   outline: 2px dotted red;
   border: none;
   border-radius: 5px;
   outline: none;
-  background: #f1f1f1;
+  background: transparent;
+  border: 2px solid #e9e5dc;
   margin-bottom:30px;
 }
-
-.modal-content input:first-child {
-	margin-left: 0;
+::-webkit-input-placeholder{
+ 
+	color:#000000;
+  text-transform: uppercase;
+  font-size: 12px;
+  line-height: 18px;
+  text-align: left;
+  font-weight: 600;
 }
 .modal-content textarea {
 	font-family:'Roboto', 'Arial', sans-serif;
-  font-size: 16px;
+  font-size: 12px;
   text-align: left;
   color: #283136;
+  text-transform: uppercase;
+  font-weight: 600;
 	border: none;
   border-radius: 5px;
   outline: none;
-  background: #f1f1f1;
+  background: transparent;
+   border: 2px solid #e9e5dc;
   text-align: left;
   color:#000000;
+  clear: both;
+  margin-top: 10px;
 }
 .user-form .btn {
+	font-family:'Roboto', 'Arial', sans-serif;
 	width: 100%;
 	margin-top: 20px;
+	background: #fb565a;
+	border:none;
+	cursor:pointer;
+	font-size: 12px;
+	line-height: 18px;
+	padding: 10px 0;
+	text-transform: uppercase;
+	font-weight: 600;
+	color: white;
 }
-*/
+.modal-content-left-rows {
+	float: left;
+	width: 220px;	
+	min-height: 65px;
+}
+.modal-content-right-rows {
+	float: right;
+	width: 220px;
+	min-height: 65px;
+}
